--- a/servicios_gisea/negocios_pequenos.html
+++ b/servicios_gisea/negocios_pequenos.html
@@ -108,8 +108,8 @@
                             <a class="nav-link" href="#" data-translate="navContacto">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="empleos.html" data-translate="navTrabaja">Trabaja con <br>
-                                Nosotros</a>
+                            <a class="nav-link" href="#" data-translate="navTrabaja">Trabaja con <br> Nosotros</
+                               a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#" data-translate="navBlog">BLOG</a>
@@ -155,8 +155,7 @@
                                         class="red-social facebook">
                                         <i class="fa-brands fa-facebook fa-xl"></i>
                                     </a>
-                                    <a href="https://youtube.com/@giseasc?si=ooZEjGHzvetXvs3D" target="_blank"
-                                        alt="youtube" class="red-social youtube">
+                                    <a href="https://youtube.com/@giseasc?si=ooZEjGHzvetXvs3D" target="_blank" alt="youtu                                class="redalt="youtube"-social youtube">
                                         <i class="fa-brands fa-youtube fa-xl"></i>
                                     </a>
                                 </div>
@@ -195,8 +194,8 @@
             <div class="owl-carousel owl-theme packages-carousel">
                 <div class="item">
                     <div class="package-card">
-                        <img src="../img/servicios/negocios-pequenos/negocios_peq_1.png" alt="Emprendimientos"
-                            class="package-image">
+                        <img src="../img/servicios/negocios-pequenos/negocios_peq_1.png"
+        " alt="Emprendimientos                   alt="Emprenkage-image">
                         <div class="package-overlay">
                             <div class="package-text">
                                 <h4>Emprendimientos</h4>
@@ -841,8 +840,8 @@
             });
         });
     </script>
-
-    <!-- Botón Scroll to Top -->
+    
+    <Botón Scroll to Top -->
     <button class="scroll-to-top" id="scrollToTop" aria-label="Volver al inicio">
         <i class="fa-solid fa-chevron-up"></i>
     </button>
