--- a/about.html
+++ b/about.html
@@ -241,15 +241,23 @@
                                         <p class="profile-card-desc">Soy licenciada en ciencias de la comunicación,
                                             especializada en producción y postproducción audiovisual. Me he concentrado
                                             en realizar contenidos para medios digitales, desde animación basado en
-                                            Motion Graphics <svg xmlns="http://www.w3.org/2000/svg"
-                                                viewBox="0 0 128 128"
+                                            Motion Graphics en <strong>Adobe After Effects</strong> <svg xmlns="http://www.w3.org/2000/svg"
+                                                viewBox="0 0 128 128" role="img" aria-label="Adobe After Effects"
                                                 style="width: 20px; height: 20px; display: inline-block; vertical-align: middle; margin: 0 4px;">
+                                                <title>Adobe After Effects - Software de composición digital y efectos visuales</title>
                                                 <path fill="#1F0740" d="M6.5 6.5h115v115H6.5z" />
                                                 <path fill="#D490C5"
                                                     d="M0 0v128h128V0H0zm121.5 121.5H6.5V6.5h115v115z" />
                                                 <path fill="#D490C5"
                                                     d="M103.5 59.2s-.6-14.6-16.5-14.6c-16 0-17.3 22-17.3 22v4.7S72.5 89.6 86 89.6s14.8-2.6 14.8-2.6v-8.1s-19.3 9.2-21.2-10h24v-9.7zm-9 2.4h-15s0-8.3 7.5-9.2c8.2 0 7.5 9.2 7.5 9.2zM50.5 29.9H38.4v3.8l-16 54.9h9.4l4.4-16.1H53l4.5 16.1h10.3L50.5 29.9zM38.2 63.1l6.4-24.5L51 63.1H38.2z" />
-                                            </svg> como postproducciones estéticamente atractivas y enérgicas.</p>
+                                            </svg> y edición profesional en <strong>Adobe Premiere Pro</strong> <svg xmlns="http://www.w3.org/2000/svg" 
+                                                viewBox="0 0 128 128" role="img" aria-label="Adobe Premiere Pro"
+                                                style="width: 20px; height: 20px; display: inline-block; vertical-align: middle; margin: 0 4px;">
+                                                <title>Adobe Premiere Pro - Software de edición de video profesional</title>
+                                                <path fill="#2A0634" d="M0 0h128v128H0z"/>
+                                                <path fill="#E976B9" d="M0 0v128h128V0H0zm123 123H5V5h118v118z"/>
+                                                <path fill="#E976B9" d="M69 47.1c-.1-9.4-7.8-16.9-17.2-16.8H33.3v58.5h9.6V67.5h8.3C61 67.4 69 59.3 69 49.4v-2.3zm-9.6 3c0 5-4.1 9.1-9.1 9.1h-7.4V38.5h7.4c5 0 9.1 4.1 9.1 9.1v2.5zM77.1 88.8V48.9s10.2-5.1 20.2-3.8v8.3s-7 0-10.1 1.3v34.2H77.1z"/>
+                                            </svg>, hasta postproducciones estéticamente atractivas y enérgicas para medios digitales.</p>
                                     </div>
                                     <div class="profile-card-social">
                                         <a href="https://www.tiktok.com/@soyliagarrido" target="_blank"
