Agregando cambios de Seccion Empleo y traduccion de navbar

--- a/about.html
+++ b/about.html
@@ -414,13 +414,13 @@
                                             <div class="experience-item">
                                                 <h4>Fundador de GISEA <img src="img/logo_GISEA.png" alt="GISEA"
                                                         class="inline-logo"></h4>
-                                                <p>Fundador y visionario de <b>GISEA</b>, desarrollando soluciones
+                                                <p>Director de tecnologías de las información, desarrollando soluciones
                                                     tecnológicas innovadoras y liderando el crecimiento de la empresa
                                                     desde sus inicios.</p>
                                             </div>
                                             <div class="experience-item">
-                                                <h4>Profesor en SUPERPROF</h4>
-                                                <p>Profesor #1 en <b>Programación</b> en la plataforma SUPERPROF,
+                                                <h4>Profesor en SUPERPROF.mx</h4>
+                                                <p>Profesor #1 en <b>Programación</b> en la plataforma SUPERPROF.mx,
                                                     brindando educación de alta calidad en tecnologías de desarrollo web
                                                     y programación.</p>
                                                 <div class="media-logos">
