--- a/service_desarollo_web.html
+++ b/service_desarollo_web.html
@@ -99,7 +99,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./servicios_gisea/empleos.html"
-                                data-translate="navTrabaja">Trabaja con <br> Nosotros</a>
+                                data-translate="navTrabaja">Empleo</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#" data-translate="navBlog">BLOG</a>
