--- a/servicios_gisea/empleos.html
+++ b/servicios_gisea/empleos.html
@@ -101,8 +101,7 @@
                             <a class="nav-link" href="#" data-translate="navContacto">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="empleos.html" data-translate="navTrabaja">Trabaja con <br>
-                                Nosotros</a>
+                            <a class="nav-link" href="empleos.html" data-translate="navTrabaja">Empleo</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#" data-translate="navBlog">BLOG</a>
@@ -202,7 +201,7 @@
     <section>
         <div class="container-lg">
             <div class="section-title">
-                <h1 class="recursos-humanos-title">Posiciones para becarios y desarrolladores.</h1>
+                <h1 class="recursos-humanos-title">Posiciones para Becarios</h1>
             </div>
 
             <!-- Contenido de la sección -->
@@ -215,7 +214,7 @@
                             data-aos-delay="100">
                             <a href="#php-laravel-section" class="btn-puesto btn-php-laravel">
                                 <i class="fa-brands fa-laravel fa-xl"></i>
-                                <span>Desarrollador<br>PHP/LARAVEL JR</span>
+                                <span>Becari@r<br>PHP/LARAVEL JR</span>
                             </a>
                         </div>
 
@@ -224,7 +223,7 @@
                             data-aos-delay="200">
                             <a href="#maquetador-section" class="btn-puesto btn-maquetador">
                                 <i class="fa-solid fa-code fa-xl"></i>
-                                <span>Maquetador</span>
+                                <span>Becari@ Maquetador</span>
                             </a>
                         </div>
 
@@ -233,7 +232,7 @@
                             data-aos-delay="300">
                             <a href="#comunicologo-section" class="btn-puesto btn-comunicologo">
                                 <i class="fa-solid fa-bullhorn fa-xl"></i>
-                                <span>Comunicólogo</span>
+                                <span>Becari@ Comunicólogo</span>
                             </a>
                         </div>
 
@@ -242,7 +241,7 @@
                             data-aos-delay="400">
                             <a href="#maestro-ingles-section" class="btn-puesto btn-maestro-ingles">
                                 <i class="fa-solid fa-chalkboard-teacher fa-xl"></i>
-                                <span>Maestro de Inglés</span>
+                                <span>Becari@ <br> Maestro de Inglés</span>
                             </a>
                         </div>
 
@@ -250,7 +249,7 @@
                         <div class="col-lg-3 col-md-6 col-12 d-flex justify-content-center" data-aos="fade-up"
                             data-aos-delay="500">
                             <a href="#becario-pm-section" class="btn-puesto btn-becario-pm">
-                                <i class="fa-solid fa-tasks fa-xs"></i>
+                                <i class="fa-brands fa-whatsapp fa-xl"></i>
                                 <span>Becari@ <br> Project Manager</span>
                             </a>
                         </div>
@@ -266,7 +265,7 @@
     <section id="php-laravel-section" class="puesto-section">
         <div class="container-lg">
             <div class="section-title">
-                <h2 class="puesto-section-title">Desarrollador PHP/Laravel JR</h2>
+                <h2 class="puesto-section-title">Becari@ PHP/Laravel JR</h2>
 
             </div>
 
@@ -291,7 +290,7 @@
                         <!-- Contenido de la tecnología (80%) -->
                         <div class="tech-content-section">
                             <div class="tech-header">
-                                <h3 class="tech-name">Desarrollador PHP/Laravel JR</h3>
+                                <h3 class="tech-name">Becari@ PHP/Laravel JR</h3>
                                 <span class="tech-category">Medio Tiempo • Remoto • Junior</span>
                             </div>
 
@@ -344,9 +343,9 @@
                             </div>
 
                             <div class="tech-action">
-                                <a href="mailto:rh@giseamex.com?subject=Solicitud%20de%20Empleo%20-%20Desarrollador%20PHP/Laravel%20JR&body=Estimado%20equipo%20de%20GISEA,%0A%0AMe%20interesa%20la%20posición%20de%20Desarrollador%20PHP/Laravel%20JR.%0A%0AAdjunto%20mi%20CV%20para%20su%20consideración.%0A%0ASaludos%20cordiales,"
+                                <a href="https://wa.me/5561856627?text=Me%20interesa%20la%20vacante%20de%20Becario%20PHP%20Laravel" target="_blank"
                                     class="tech-whatsapp-btn">
-                                    <i class="fa-solid fa-envelope"></i>
+                                     <i class="fa-brands fa-whatsapp fa-xl"></i>
                                     <span>Aplicar ahora</span>
                                 </a>
                             </div>
@@ -361,7 +360,7 @@
     <section id="maquetador-section" class="puesto-section">
         <div class="container-lg">
             <div class="section-title">
-                <h2 class="puesto-section-title">Maquetador</h2>
+                <h2 class="puesto-section-title">Becari@ Maquetador</h2>
             </div>
 
             <div class="row justify-content-center mt-5">
@@ -379,7 +378,7 @@
                         <!-- Contenido de la tecnología (80%) -->
                         <div class="tech-content-section">
                             <div class="tech-header">
-                                <h3 class="tech-name">Maquetador (Se hara Examen Tecnico)</h3>
+                                <h3 class="tech-name">Becari@ Maquetador (Se hara Examen Tecnico)</h3>
                                 <span class="tech-category">Medio Tiempo • Remoto • Junior</span>
                             </div>
 
@@ -550,9 +549,9 @@
                             </div>
 
                             <div class="tech-action">
-                                <a href="mailto:rh@giseamex.com?subject=Solicitud%20de%20Empleo%20-%20Maquetador&body=Estimado%20equipo%20de%20GISEA,%0A%0AMe%20interesa%20la%20posición%20de%20Maquetador.%0A%0AAdjunto%20mi%20CV%20para%20su%20consideración.%0A%0ASaludos%20cordiales,"
+                                <a href="https://wa.me/5561856627?text=Me%20interesa%20la%20vacante%20de%20Becario%20Maquetador" target="_blank"
                                     class="tech-whatsapp-btn">
-                                    <i class="fa-solid fa-envelope"></i>
+                                     <i class="fa-brands fa-whatsapp fa-xl"></i>
                                     <span>Aplicar ahora</span>
                                 </a>
                             </div>
@@ -567,7 +566,7 @@
     <section id="comunicologo-section" class="puesto-section">
         <div class="container-lg">
             <div class="section-title">
-                <h2 class="puesto-section-title">Comunicólogo</h2>
+                <h2 class="puesto-section-title">Becari@ Comunicólogo</h2>
             </div>
 
             <div class="row justify-content-center mt-5">
@@ -585,7 +584,7 @@
                         <!-- Contenido de la tecnología (80%) -->
                         <div class="tech-content-section">
                             <div class="tech-header">
-                                <h3 class="tech-name">Comunicólogo</h3>
+                                <h3 class="tech-name">Becari@ Comunicólogo</h3>
                                 <span class="tech-category">Medio Tiempo • Remoto • Becario</span>
                             </div>
 
@@ -687,9 +686,9 @@
                             </div>
 
                             <div class="tech-action">
-                                <a href="mailto:rh@giseamex.com?subject=Solicitud%20de%20Empleo%20-%20Comunicólogo&body=Estimado%20equipo%20de%20GISEA,%0A%0AMe%20interesa%20la%20posición%20de%20Comunicólogo.%0A%0AAdjunto%20mi%20CV%20para%20su%20consideración.%0A%0ASaludos%20cordiales,"
+                                <a href="https://wa.me/5561856627?text=Me%20interesa%20la%20vacante%20de%20Becario%20Comunicologo" target="_blank"
                                     class="tech-whatsapp-btn">
-                                    <i class="fa-solid fa-envelope"></i>
+                                     <i class="fa-brands fa-whatsapp fa-xl"></i>
                                     <span>Aplicar ahora</span>
                                 </a>
                             </div>
@@ -704,7 +703,7 @@
     <section id="maestro-ingles-section" class="puesto-section">
         <div class="container-lg">
             <div class="section-title">
-                <h2 class="puesto-section-title">Maestro de Inglés</h2>
+                <h2 class="puesto-section-title">Becari@ Maestro de Inglés</h2>
             </div>
 
             <div class="row justify-content-center mt-5">
@@ -722,7 +721,7 @@
                         <!-- Contenido de la tecnología (80%) -->
                         <div class="tech-content-section">
                             <div class="tech-header">
-                                <h3 class="tech-name">Maestro de Inglés</h3>
+                                <h3 class="tech-name">Becari@ Maestro de Inglés</h3>
                                 <span class="tech-category">Tiempo Completo • Remoto </span>
                             </div>
 
@@ -745,7 +744,8 @@
                                         </div>
                                         <div class="stat-item">
                                             <span class="stat-number">Certificación</span>
-                                            <span class="stat-label">Haber presentado examen Cambridge/IELTS</span>
+                                            <span class="stat-label"><b>(No es Obligatoria)</b> <br>
+                                                <b>+Plus</b> Haber presentado examen Cambridge/IELTS</span>
                                         </div>
                                     </div>
                                 </div>
@@ -772,9 +772,9 @@
                                 </div>
                             </div>
                             <div class="tech-action">
-                                <a href="mailto:rh@giseamex.com?subject=Solicitud%20de%20Empleo%20-%20Maestro%20de%20Inglés&body=Estimado%20equipo%20de%20GISEA,%0A%0AMe%20interesa%20la%20posición%20de%20Maestro%20de%20Inglés.%0A%0AAdjunto%20mi%20CV%20para%20su%20consideración.%0A%0ASaludos%20cordiales,"
+                                <a href="https://wa.me/5561856627?text=Me%20interesa%20la%20vacante%20de%20Becario%20Maestro%20Ingles" target="_blank"
                                     class="tech-whatsapp-btn">
-                                    <i class="fa-solid fa-envelope"></i>
+                                     <i class="fa-brands fa-whatsapp fa-xl"></i>
                                     <span>Aplicar ahora</span>
                                 </a>
                             </div>
@@ -789,7 +789,7 @@
     <section id="becario-pm-section" class="puesto-section">
         <div class="container-lg">
             <div class="section-title">
-                <h2 class="puesto-section-title">Becario Project Manager</h2>
+                <h2 class="puesto-section-title">Becari@ Project Manager</h2>
             </div>
 
             <div class="row justify-content-center mt-5">
@@ -807,7 +807,7 @@
                         <!-- Contenido de la tecnología (80%) -->
                         <div class="tech-content-section">
                             <div class="tech-header">
-                                <h3 class="tech-name">Becario Project Manager</h3>
+                                <h3 class="tech-name">Becari@ Project Manager</h3>
                                 <span class="tech-category">Tiempo Completo • Remoto • Becario</span>
                             </div>
 
@@ -891,9 +891,9 @@
                             </div>
 
                             <div class="tech-action">
-                                <a href="mailto:rh@giseamex.com?subject=Solicitud%20de%20Empleo%20-%20Becario%20Project%20Manager&body=Estimado%20equipo%20de%20GISEA,%0A%0AMe%20interesa%20la%20posición%20de%20Becario%20Project%20Manager.%0A%0AAdjunto%20mi%20CV%20para%20su%20consideración.%0A%0ASaludos%20cordiales,"
+                                <a href="https://wa.me/5561856627?text=Me%20interesa%20la%20vacante%20de%20Becario%20Project%20Manager" target="_blank"
                                     class="tech-whatsapp-btn">
-                                    <i class="fa-solid fa-envelope"></i>
+                                     <i class="fa-brands fa-whatsapp fa-xl"></i>
                                     <span>Aplicar ahora</span>
                                 </a>
                             </div>
