--- a/servicios_gisea/recursos_humanos.html
+++ b/servicios_gisea/recursos_humanos.html
@@ -102,8 +102,7 @@
                             <a class="nav-link" href="#" data-translate="navContacto">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="empleos.html" data-translate="navTrabaja">Trabaja con <br>
-                                Nosotros</a>
+                            <a class="nav-link" href="empleos.html" data-translate="navTrabaja">Empleo</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#" data-translate="navBlog">BLOG</a>
