--- a/servicios_gisea/influencers.html
+++ b/servicios_gisea/influencers.html
@@ -228,7 +228,8 @@
                                 <h3 class="social-title mb-3">Sígueme en mis redes</h3>
                                 <div class="social-links d-flex justify-content-center gap-3 flex-wrap">
                                     <!-- Instagram -->
-                                    <a href="https://www.instagram.com/soyliagarrido/" class="social-link instagram-link" target="_blank"
+                                    <a href="https://www.instagram.com/soyliagarrido/"
+                                        class="social-link instagram-link" target="_blank"
                                         aria-label="Instagram de Lia Garrido">
                                         <img src="../img/influencers/icons/instagram.png" alt="Instagram"
                                             class="social-icon">
@@ -236,7 +237,8 @@
                                     </a>
 
                                     <!-- TikTok -->
-                                    <a href="https://www.tiktok.com/@soyliagarrido?is_from_webapp=1&sender_device=pc" class="social-link tiktok-link" target="_blank"
+                                    <a href="https://www.tiktok.com/@soyliagarrido?is_from_webapp=1&sender_device=pc"
+                                        class="social-link tiktok-link" target="_blank"
                                         aria-label="TikTok de Lia Garrido">
                                         <img src="../img/influencers/icons/tiktok.png" alt="TikTok" class="social-icon">
                                         <span class="social-text">TikTok</span>
@@ -291,7 +293,8 @@
                         <img src="../img/influencers/iphone_contorno.PNG" alt="iPhone Frame" class="phone-image">
                         <div class="video-container">
                             <video class="plyr-video" muted>
-                                <source src="../influncer_portafolio/media/historia_instagram_beerfest.mp4" type="video/mp4">
+                                <source src="../influncer_portafolio/media/historia_instagram_beerfest.mp4"
+                                    type="video/mp4">
                             </video>
                         </div>
                     </div>
@@ -303,11 +306,105 @@
                         <img src="../img/influencers/iphone_contorno.PNG" alt="iPhone Frame" class="phone-image">
                         <div class="video-container">
                             <video class="plyr-video" muted>
-                                <source src="../influncer_portafolio/media/video_instagram_reel_garnier.mp4" type="video/mp4">
+                                <source src="../influncer_portafolio/media/video_instagram_reel_garnier.mp4"
+                                    type="video/mp4">
                             </video>
                         </div>
                     </div>
                     <p class="precio-servicio">$2500</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- SECCIÓN ESTADÍSTICAS-->
+    <section class="stats-section py-5">
+        <div class="container text-center">
+            <h2 class="text-center mb-4 titulo-precios">Mi Número de Seguidores Actuales</h2>
+            <div class="row g-4 justify-content-center">
+                <!-- TIKTOK -->
+                <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="0">
+                    <div class="stats-card p-4 h-100">
+                        <div class="mb-3">
+                            <i class="bi bi-tiktok fs-4 text-dark"></i> @soyliagarrido
+                        </div>
+                        <h3 class="fw-bold display-6">
+                            <span id="count-tiktok">0</span><span class="text-pink">k</span>
+                        </h3>
+                        <p class="subtitle text-pink mb-3">Tiktok Followers</p>
+                        <p class="desc small">Soy activa creando contenido sobre animales y estilo de vida </p>
+                        <div class="tiktok-wrapper">
+                            <div class="tiktok-placeholder">
+                                <div class="tiktok-loading">
+                                    <i class="bi bi-tiktok fs-1 text-dark mb-2"></i>
+                                    <p class="small text-muted">Cargando contenido...</p>
+                                </div>
+                            </div>
+                            <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@soyliagarrido"
+                                data-unique-id="soyliagarrido" data-embed-type="creator" style="display: none;">
+                                <section>
+                                    <a target="_blank"
+                                        href="https://www.tiktok.com/@soyliagarrido?refer=creator_embed">@soyliagarrido</a>
+                                </section>
+                            </blockquote>
+                        </div>
+                        <a href="https://www.tiktok.com/@soyliagarrido?is_from_webapp=1&sender_device=pc"
+                            target="_blank" class="btn btn-follow mt-3">Sígueme</a>
+                    </div>
+                </div>
+
+                <!-- INSTAGRAM -->
+                <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
+                    <div class="stats-card p-4 h-100">
+                        <div class="mb-3">
+                            <i class="bi bi-instagram fs-4 text-danger"></i> @soyliagarrido
+                        </div>
+                        <h3 class="fw-bold display-6">
+                            <span id="count-instagram">0</span><span class="text-pink">k</span>
+                        </h3>
+                        <p class="subtitle text-pink mb-3">Instagram Followers</p>
+                        <p class="desc small">Comparto fotos con mis mascotas, salidas a restaurantes o bares ,
+                            reels sobre animales y recomendaciones</p>
+                        <div class="instagram-wrapper">
+                            <div class="instagram-placeholder">
+                                <div class="instagram-loading">
+                                    <i class="bi bi-instagram fs-1 text-danger mb-2"></i>
+                                    <p class="small text-muted">Cargando contenido...</p>
+                                </div>
+                            </div>
+                            <blockquote class="instagram-media"
+                                data-instgrm-permalink="https://www.instagram.com/soyliagarrido/"
+                                data-instgrm-version="14" style="display: none;">
+                                <div style="padding:16px;">
+                                    <a href="https://www.instagram.com/soyliagarrido/"
+                                        style="background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;"
+                                        target="_blank">
+                                        <div style="display: flex; flex-direction: row; align-items: center;">
+                                            <div
+                                                style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;">
+                                            </div>
+                                            <div
+                                                style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
+                                                <div
+                                                    style="background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; margin-bottom: 6px; width: 100px;">
+                                                </div>
+                                                <div
+                                                    style="background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; width: 60px;">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <p
+                                        style="color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; line-height:17px; margin-bottom:0; margin-top:8px; overflow:hidden; padding:8px 0 7px; text-align:center; text-overflow:ellipsis; white-space:nowrap;">
+                                        <a href="https://www.instagram.com/soyliagarrido/"
+                                            style="color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px; text-decoration:none;"
+                                            target="_blank">@soyliagarrido</a>
+                                    </p>
+                                </div>
+                            </blockquote>
+                        </div>
+                        <a href="https://www.instagram.com/soyliagarrido/" target="_blank"
+                            class="btn btn-follow mt-3">Sígueme</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -445,7 +542,13 @@
     <script src="../js/swiper/swiper-bundle.min.js"></script>
     <script src="https://cdn.plyr.io/3.7.8/plyr.polyfilled.js"></script>
     <script src="../influncer_portafolio/js/plyr-config.js"></script>
+    <script src="../influncer_portafolio/js/counter-animation.js"></script>
+    <script src="../influncer_portafolio/js/social-embeds.js"></script>
     <script src="../js/theme.js"></script>
+
+    <!-- TikTok embed script -->
+    <script async src="https://www.tiktok.com/embed.js"></script>
+    <script async src="//www.instagram.com/embed.js"></script>
     <script>
         AOS.init();
     </script>
